# rags-hybrid-search-over-docs

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
data/bm25/: bm25_index.pkl
data/documents/: .gitkeep
data/evaluation/: golden_qa.json
data/evaluation/reports/: chunking_comparison.json  eval_report_20260709_150813.json
docs/: RAG_Pipeline_Project.md  learning_path_guideline.md
frontend/src/: App.css  App.jsx  index.css
rags_hybrid_search_over_docs.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scratch/: test_dense_retrieval.py  test_indexing_runner.py  test_ingestion_runner.py  test_reranking.py  test_rrf_fusion.py  test_sparse_retrieval.py
src/: __init__.py  config.py
src/api/: main.py  schemas.py
src/dashboard/: app.py
src/evaluation/: compare_chunking.py  evaluator.py  run_eval.py
src/generation/: __init__.py  generator.py
src/ingestion/: chunker.py  loader.py  seed.py
src/retrieval/: __init__.py  dense.py  index_manager.py  reranker.py  retriever.py  sparse.py
tests/: conftest.py  test_api.py  test_chunker.py  test_compare_chunking.py  test_evaluation.py  test_generator.py  test_indexing.py  test_loader.py  test_reranker.py  test_retriever.py  test_seed.py
