[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rags-hybrid-search-over-docs"
version = "0.1.0"
description = "A production-grade RAG pipeline with hybrid search over internal documentation"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Developer" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "chromadb>=0.4.0",
    "openai>=1.0.0",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=2.2.2",
    "langchain-text-splitters>=0.0.1",
    "streamlit>=1.24.0",
    "pypdf>=3.10.0",
    "beautifulsoup4>=4.12.0",
    "markdown>=3.4.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "numpy>=1.24.0",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.3.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.3.0",
    "isort>=5.12.0",
    "httpx>=0.24.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88
